# FEM

./: config.py  main.py  numerical_test.py  scene_cpp.py  scene_py.py  scene_torch.py  visualization.py  write_video.py
cpp/: CMakeLists.txt  fem_lib.py  py_fem_lib.i  run.sh
cpp/include/: scene.h  solver.h
cpp/src/: scene.cpp  solver.cpp
